layout design done for add hazari game fragment

--- a/app/src/main/res/layout/custom_view_filled_single_button.xml
+++ b/app/src/main/res/layout/custom_view_filled_single_button.xml
@@ -3,15 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true">
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_filled_single_button"
-        android:clickable="true"
-        android:focusable="true"
+        android:clickable="false"
+        android:focusable="false"
         android:gravity="center"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
