--- a/app/src/main/res/layout/fragment_add_hazari_game.xml
+++ b/app/src/main/res/layout/fragment_add_hazari_game.xml
@@ -35,57 +35,65 @@
                 android:orientation="vertical">
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
-                    android:id="@+id/game_name_input_field"
+                    android:id="@+id/game_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
                     app:bif_hint="Enter game name"
+                    app:bif_image="@drawable/icon_game_name"
                     app:bif_title="Game name ?" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
-                    android:id="@+id/target_score_input_field"
+                    android:id="@+id/target_score"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
                     app:bif_hint="Enter target score"
+                    app:bif_image="@drawable/icon_target"
                     app:bif_text="1000"
                     app:bif_title="Target score ?" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
-                    android:id="@+id/player_name_input_field1"
+                    android:id="@+id/player_name1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     app:bif_hint="Enter player name 1"
+                    app:bif_image="@drawable/icon_person"
                     app:bif_title="Player name ?"
                     app:bif_title_visibility="true" />
 
-
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
+                    android:id="@+id/player_name2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     app:bif_hint="Enter player name 2"
+                    app:bif_image="@drawable/icon_person"
                     app:bif_title_visibility="false" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
+                    android:id="@+id/player_name3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     app:bif_hint="Enter player name 3"
+                    app:bif_image="@drawable/icon_person"
                     app:bif_title_visibility="false" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
+                    android:id="@+id/player_name4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
                     app:bif_hint="Enter player name 4"
+                    app:bif_image="@drawable/icon_person"
                     app:bif_title_visibility="false" />
 
                 <View
@@ -105,6 +113,7 @@
                     android:padding="16dp">
 
                     <com.ashtray.card.game.manager.common.ui.custom.FilledSingleButton
+                        android:id="@+id/save_button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="4dp"
@@ -112,6 +121,7 @@
                         app:fsb_text="Save" />
 
                     <com.ashtray.card.game.manager.common.ui.custom.StrokedSingleButton
+                        android:id="@+id/cancel_button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="4dp"
