--- a/app/src/main/res/layout/fragment_add_hazari_game.xml
+++ b/app/src/main/res/layout/fragment_add_hazari_game.xml
@@ -35,7 +35,7 @@
                 android:orientation="vertical">
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
-                    android:id="@+id/game_name"
+                    android:id="@+id/game_name_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -44,7 +44,7 @@
                     app:bif_title="Game name ?" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
-                    android:id="@+id/target_score"
+                    android:id="@+id/target_score_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -54,7 +54,7 @@
                     app:bif_title="Target score ?" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
-                    android:id="@+id/player_name1"
+                    android:id="@+id/player_name_field1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -66,7 +66,7 @@
                     app:bif_title_visibility="true" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
-                    android:id="@+id/player_name2"
+                    android:id="@+id/player_name_field2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -77,7 +77,7 @@
                     app:bif_title_visibility="false" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
-                    android:id="@+id/player_name3"
+                    android:id="@+id/player_name_field3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -88,7 +88,7 @@
                     app:bif_title_visibility="false" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
-                    android:id="@+id/player_name4"
+                    android:id="@+id/player_name_field4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
