Adding logic to check each input differently while adding a new game

--- a/app/src/main/res/layout/fragment_add_hazari_game.xml
+++ b/app/src/main/res/layout/fragment_add_hazari_game.xml
@@ -41,6 +41,7 @@
                     android:layout_margin="16dp"
                     app:bif_hint="Enter game name"
                     app:bif_image="@drawable/icon_game_name"
+                    app:bif_input_max_length="32"
                     app:bif_title="Game name ?" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
@@ -50,6 +51,7 @@
                     android:layout_margin="16dp"
                     app:bif_hint="Enter target score"
                     app:bif_image="@drawable/icon_target"
+                    app:bif_input_max_length="6"
                     app:bif_text="1000"
                     app:bif_title="Target score ?" />
 
@@ -57,35 +59,34 @@
                     android:id="@+id/player_name_field1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="16dp"
+                    android:layout_margin="16dp"
                     app:bif_hint="Enter player name 1"
                     app:bif_image="@drawable/icon_person"
-                    app:bif_title="Player name ?"
+                    app:bif_input_max_length="32"
+                    app:bif_title="Player name 1 ?"
                     app:bif_title_visibility="true" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
                     android:id="@+id/player_name_field2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="16dp"
+                    android:layout_margin="16dp"
                     app:bif_hint="Enter player name 2"
                     app:bif_image="@drawable/icon_person"
-                    app:bif_title_visibility="false" />
+                    app:bif_input_max_length="32"
+                    app:bif_title="Player name 2 ?"
+                    app:bif_title_visibility="true" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
                     android:id="@+id/player_name_field3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="16dp"
+                    android:layout_margin="16dp"
                     app:bif_hint="Enter player name 3"
                     app:bif_image="@drawable/icon_person"
-                    app:bif_title_visibility="false" />
+                    app:bif_input_max_length="32"
+                    app:bif_title="Player name 3 ?"
+                    app:bif_title_visibility="true" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
                     android:id="@+id/player_name_field4"
@@ -94,7 +95,9 @@
                     android:layout_margin="16dp"
                     app:bif_hint="Enter player name 4"
                     app:bif_image="@drawable/icon_person"
-                    app:bif_title_visibility="false" />
+                    app:bif_input_max_length="32"
+                    app:bif_title="Player name 4 ?"
+                    app:bif_title_visibility="true" />
 
                 <View
                     android:layout_width="match_parent"
