--- a/app/src/main/res/layout/custom_view_basic_input_field.xml
+++ b/app/src/main/res/layout/custom_view_basic_input_field.xml
@@ -54,4 +54,18 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/tv_error_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="false"
+        android:focusable="false"
+        android:paddingStart="8dp"
+        android:paddingTop="2dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="2dp"
+        android:text="@string/app_name"
+        android:textColor="@color/error_color_deep"
+        android:textSize="12sp" />
+
 </LinearLayout>
