--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -26,9 +26,8 @@
         <attr name="bif_image_visibility" format="boolean" />
         <attr name="bif_input_type" format="enum">
             <enum name="TEXT" value="0" />
-            <enum name="ONLY_POSITIVE_NUMBER" value="1" />
-            <enum name="ALL_KIND_OF_NUMBERS" value="2" />
-            <enum name="ERROR" value="3" />
+            <enum name="POSITIVE_DECIMAL_NUMBER" value="1" />
         </attr>
+        <attr name="bif_input_max_length" format="integer" />
     </declare-styleable>
 </resources>
