--- a/app/src/main/res/layout/custom_view_basic_input_field.xml
+++ b/app/src/main/res/layout/custom_view_basic_input_field.xml
@@ -66,6 +66,7 @@
         android:paddingBottom="2dp"
         android:text="@string/app_name"
         android:textColor="@color/error_color_deep"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        android:visibility="invisible" />
 
 </LinearLayout>
