change the layout design little bit

--- a/app/src/main/res/layout/fragment_add_hazari_game.xml
+++ b/app/src/main/res/layout/fragment_add_hazari_game.xml
@@ -39,20 +39,28 @@
                     android:id="@+id/game_name_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
                     app:bif_hint="Enter game name"
                     app:bif_image="@drawable/icon_game_name"
                     app:bif_input_max_length="32"
+                    app:bif_input_type="TEXT"
                     app:bif_title="Game name ?" />
 
                 <com.ashtray.card.game.manager.common.ui.custom.BasicInputField
                     android:id="@+id/target_score_field"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
                     app:bif_hint="Enter target score"
                     app:bif_image="@drawable/icon_target"
                     app:bif_input_max_length="6"
+                    app:bif_input_type="POSITIVE_DECIMAL_NUMBER"
                     app:bif_text="1000"
                     app:bif_title="Target score ?" />
 
@@ -60,10 +68,14 @@
                     android:id="@+id/player_name_field1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
                     app:bif_hint="Enter player name 1"
                     app:bif_image="@drawable/icon_person"
                     app:bif_input_max_length="32"
+                    app:bif_input_type="TEXT"
                     app:bif_title="Player name 1 ?"
                     app:bif_title_visibility="true" />
 
@@ -71,10 +83,14 @@
                     android:id="@+id/player_name_field2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
                     app:bif_hint="Enter player name 2"
                     app:bif_image="@drawable/icon_person"
                     app:bif_input_max_length="32"
+                    app:bif_input_type="TEXT"
                     app:bif_title="Player name 2 ?"
                     app:bif_title_visibility="true" />
 
@@ -82,10 +98,14 @@
                     android:id="@+id/player_name_field3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
                     app:bif_hint="Enter player name 3"
                     app:bif_image="@drawable/icon_person"
                     app:bif_input_max_length="32"
+                    app:bif_input_type="TEXT"
                     app:bif_title="Player name 3 ?"
                     app:bif_title_visibility="true" />
 
@@ -93,10 +113,14 @@
                     android:id="@+id/player_name_field4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
                     app:bif_hint="Enter player name 4"
                     app:bif_image="@drawable/icon_person"
                     app:bif_input_max_length="32"
+                    app:bif_input_type="TEXT"
                     app:bif_title="Player name 4 ?"
                     app:bif_title_visibility="true" />
 
